prusti/tests/verify/fail/no-annotations/panic.rs

fn main() {
    panic!();  //~ ERROR panic!(..) statement might panic
}
